# vp_interop

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
api/: .gitignore  Cargo.toml  README.md  library_architecture.md  wrangler.toml  wrangler_example.toml
api/.cargo/: config.toml
api/src/: db.rs  dids.rs  handlers.rs  lib.rs  mdl_data_fields.rs  present.rs  verify.rs
api/src/db/: cf.rs  mod.rs
api/src/test/: spruce_ca.key  spruceid_paris_reader_signer_cert.b64  spruceid_paris_reader_signer_key.b64  spruceid_reader_test_s.pem  test_event_mdoc.b64  test_event_reader_certificate.b64  test_event_reader_key.b64  test_mdoc.cbor  verifier_test_cert.b64  verifier_test_cert.pem  verifier_testing_key.b64
api/test_event_certificates/: iaca_bdr.der  iaca_bdr.pem  iaca_google.der  iaca_google.pem  iaca_hid.der  iaca_hid.pem  iaca_idemia.der  iaca_idemia.pem  iaca_improveid.der  iaca_improveid.pem  iaca_nec.der  iaca_nec.pem  iaca_oneproof.der  iaca_oneproof.pem  iaca_panasonic.der  iaca_panasonic.pem  iaca_samsung.der  iaca_samsung.pem  iaca_spruceid.der  iaca_spruceid.pem  iaca_thales.der  iaca_thales.pem  no_vical.txt
frontend/: Cargo.toml  README.md  index.html  wrangler.toml  wrangler_example.toml
frontend/.cargo/: config.toml
frontend/src/: main.rs  outcome.rs  polling.rs
frontend/workers-site/: .gitignore  index.js
