[package]
name = "vp_interop_api"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "JWT VC Presentation Profile"
repository = "https://github.com/spruceid/vp_interop/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oidc4vp = { git = "https://github.com/spruceid/oidc4vp-rs", rev = "dd06e4e" }
siop = { git = "https://github.com/spruceid/siop-rs", rev = "939156e" }
worker = "0.0.12"
wee_alloc = "0.4"
serde_json = "1"
headers = "0.3.8"
thiserror = "1.0.37"
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
serde_with = "2.0.1"
ssi = { version = "0.6.0", default-features = false, features = ["w3c"] }
did-ion = "0.2.0"
did-web = { version = "0.2.1", default-features = false }
did-jwk = { version = "0.1.1", default-features = false }

rand = "0.8.4"
chrono = { version = "0.4.19", features = ["wasmbind"] }
uuid = { version = "1.2.1", features = ["serde", "v4", "wasm-bindgen", "js"] }
time = { version = "0.3.16", features = ["wasm-bindgen"] }
serde_urlencoded = "0.7.1"
async-trait = "0.1.58"

[dev-dependencies]
serde_path_to_error = "0.1.8"
pretty_assertions = "1.3.0"
tokio = { version = "1.21.2", features = ["macros"] }
did-method-key = "0.2.1"
