[package]
name = "vp_interop_api"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "JWT VC Presentation Profile"
repository = "https://github.com/spruceid/vp_interop/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
siop = { git = "https://github.com/spruceid/siop-rs", rev = "939156e" }
isomdl180137 = { git = "ssh://git@github.com/spruceid/isomdl-18013-7.git", rev = "246b710" }
#isomdl-18013-7 = {path = "../../isomdl-18013-7/lib"}
oidc4vp = { git = "https://github.com/spruceid/oidc4vp-rs.git", rev = "a416870" }
#oidc4vp = { path = "../../oidc4vp-rs"}
isomdl = { git = "ssh://git@github.com/spruceid/isomdl.git", rev = "b2324b7" }
# isomdl = {path = "../../isomdl"}
worker = "0.0.12"
wee_alloc = "0.4"
serde_json = "1"
headers = "0.3.8"
thiserror = "1.0.37"
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
serde_with = "2.0.1"
ssi = { version = "0.6.0", default-features = false, features = ["w3c"] }
did-ion = "0.2.0"
did-web = { version = "0.2.1", default-features = false }
did-jwk = { version = "0.1.1", default-features = false }
rand = "0.8.5"
chrono = { version = "0.4.19", features = ["wasmbind"] }
uuid = { version = "1.2.1", features = ["serde", "v4", "wasm-bindgen", "js"] }
time = { version = "0.3.16", features = ["wasm-bindgen"] }
serde_urlencoded = "0.7.1"
async-trait = "0.1.58"
p256 = "0.13.2"
# p256 = { version = "0.11", features = ["ecdsa"] }
base64 = "0.13.1"
x509-cert = "0.2.3"
x509-certificate = "0.19.0"
serde_cbor = "0.11.2"
signature = "2.1.0"
josekit = { git = "https://github.com/cobward/josekit-rs", rev = "635c8a7" }
base64url = "0.1.0"
log = "0.4.20"
tracing = "0.1.37"

[dev-dependencies]
serde_path_to_error = "0.1.8"
pretty_assertions = "1.3.0"
tokio-test = "0.4.2"
tokio = { version = "1.21.2", features = ["macros"] }
did-method-key = "0.2.1"
hex = "0.4.3"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
