[package]
name = "vp_interop_frontend"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "JWT VC Presentation Profile"
repository = "https://github.com/spruceid/vp_interop/"

[dependencies]
base64 = "0.13.1"
getrandom = { version = "0.2.8", features = ["js"] }
gloo = "0.8.0"
image = "0.23"
lazy_static = "1.4.0"
qrcode = "0.12.0"
reqwasm = "0.5.0"
serde = "1.0"
serde_json = "1.0.87"
url = "2.3.1"
serde_urlencoded = "0.7.1"
uuid = { version = "1.2.1", features = ["v4", "wasm-bindgen"] }
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Window", "Navigator", "Clipboard"] }
yew = "0.19"
yew-router = "0.16.0"
